GUI for user interface

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-chess_master_test/build/
-chess_master_test/install/
-chess_master_test/log/
-
 build/
 install/
 log/
+chess_master_test/build/
+chess_master_test/install/
+chess_master_test/log/
+chess_master_test/
