--- a/src/chess_master/package.xml
+++ b/src/chess_master/package.xml
@@ -9,8 +9,10 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>interfaces</exec_depend>
   <exec_depend>chess</exec_depend>
+  <exec_depend>cairosvg</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
