--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-build/
-install/
-log/
-chess_master_test/build/
-chess_master_test/install/
-chess_master_test/log/
-chess_master_test/
+/build/
+/build/gripper/
+/install/
+/install/gripper/
+/log/
+/chess_master_test/build/
+/chess_master_test/install/
+/chess_master_test/log/
+/chess_master_test/
