--- a/install/gripper/share/gripper/package.xml
+++ b/install/gripper/share/gripper/package.xml
@@ -1,1 +1,24 @@
-/home/ryanl/4231/MTRN4231_Project/build/gripper/package.xml
+<?xml version="1.0"?>
+<package format="3">
+  <name>gripper</name>
+  <version>0.0.1</version>
+  <description>Arduino gripper action client</description>
+  <maintainer email="you@example.com">ryan</maintainer>
+  <license>Apache-2.0</license>
+
+  <buildtool_depend>ament_python</buildtool_depend>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>control_msgs</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+  <exec_depend>python3-serial</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
+</package>
