--- a/src/gripper/package.xml
+++ b/src/gripper/package.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>gripper</name>
-  <version>0.0.1</version>
-  <description>Arduino gripper action client</description>
-  <maintainer email="you@example.com">ryan</maintainer>
-  <license>Apache-2.0</license>
+  <version>0.1.0</version>
+  <description>Serial gripper action bridge</description>
+  <maintainer email="you@example.com">You</maintainer>
+  <license>BSD-3-Clause</license>
 
   <buildtool_depend>ament_python</buildtool_depend>
 
   <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>control_msgs</exec_depend>
-  <exec_depend>launch</exec_depend>
-  <exec_depend>launch_ros</exec_depend>
-  <exec_depend>python3-serial</exec_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>rclpy_action</exec_depend>
+  <exec_depend>pyserial</exec_depend>
+  <depend>custom_interfaces</depend> <!-- or whatever provides GripperCommand -->
 
   <export>
     <build_type>ament_python</build_type>
